--- a/.github/workflows/merge_md_files.yml
+++ b/.github/workflows/merge_md_files.yml
@@ -1,7 +1,7 @@
 name: Merge Markdown Files
 
 on:
-  workflow_dispatch:  # 允许手动触发
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   merge-md-files:
@@ -13,11 +13,18 @@ jobs:
 
       - name: Find and merge all .md files by order
         run: |
-          # 查找所有 .md 文件，并按字母顺序排序，合并成一个文件
-          find . -name "*.md" | sort | xargs cat > merged.md
+          # Find all .md files, sort by name, and merge into merged.md if any exist
+          md_files=$(find . -name "*.md" | sort)
+          if [ -z "$md_files" ]; then
+            echo "No markdown files found."
+            exit 0
+          else
+            cat $md_files > merged.md
+            echo "Markdown files merged successfully."
+          fi
 
       - name: Display merged file
-        run: cat merged.md  # 仅用于显示合并结果，可选步骤
+        run: cat merged.md  # Display merged file content (optional)
 
       - name: Commit merged file
         run: |
